--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.9.2",
     "axios": "^0.21.0",
     "react": "^17.0.1",
+    "react-axios": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.16.0",
     "react-redux": "^7.2.2",
